--- a/print/package.json
+++ b/print/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.x",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.27.6",
     "classnames": "^2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@rsbuild/core": "^1.5.14",
