--- a/print/tsconfig.json
+++ b/print/tsconfig.json
@@ -17,7 +17,7 @@
     "noUncheckedSideEffectImports": true,
 
     /* type checking */
-    "strict": true,
+    // "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
 
