--- a/print/package.json
+++ b/print/package.json
@@ -13,6 +13,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.27.6",
     "classnames": "^2.5.1",
+    "immer": "^11.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.4",
